# cglwn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dreams.org
buggui/: TODO.org  buggui.html  unit_tests.html
buggui/js/: buggui.js  node_state.js  scene_graph.js
c++-layer/: keybindings.el  packages.el
c++-python-binding-generator/: README.md
c++-python-binding-generator/test/: TextComponent.h  TextComponentPython.cpp
c++-python-binding-generator/test_multi_file/: Color.h  Desk.cpp  Desk.h  a.out
cpp-concurrency/: CMakeLists.txt  README.md
cpp-concurrency/lesson2/: 1-thread_capture_by_value_non_general.cpp  2-thread_capture_by_value_general.cpp  3-thread_capture_by_reference.cpp
cpp-concurrency/lesson3/: 1-linked_list_race.cpp  2-sin_no_shared_data.cpp  Race Example.odp
dotfiles/: .spacemacs
emscripten_example/: README.md
emscripten_example/src/: add.cpp  index.html
gaussian_process/: distribution_analogue_animation.py  plot_gaussian_process.py  plot_squared_exponential.py
geometry-js/: Matrix.js
nbind-example/: README.md  hello.cpp  index.html  package.json
nclt/: README.md  csv.h  nclt_rosbag.cpp  trajectory.py  viz.py
nlls/: CMakeLists.txt  tests.cpp
point_cloud_renderer/: index.html
point_cloud_renderer/doc/: point_cloud_renderer_story.org
point_cloud_renderer/src/: application.js
pong_reinforcement_learning/doc/: pong_reinforcement_learning_story.org
public_or_private/: CMakeLists.txt
sauna/: plot_gps.py  plot_gps_2d.py  query.py  show_imagestack.py  tests.py
sauna/test_data/: sudburyteach1_gps.txt  (+3 more)
save_point_cloud2/: README.md  __main__.py  save_point_cloud2.cpp
variance_app/: show_variance.py
velodyne_unpacker/: CMakeLists.txt  notes.org
viridis_cpp/: viridis.h
web/: index.html  main.js  slam_data.js
(+27 files in other folders)
